[package]
name = "transfer"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.1"
solana-program = "=1.8.8"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.8.8"
solana-sdk = "1.8.8"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
